@@ -71,7 +71,7 @@
 #elif defined (CONFIG_RALINK_MT7621)
 #define RALINK_GPIO_HAS_9532            1
 #elif defined (CONFIG_RALINK_MT7628)
-//#define RALINK_GPIO_HAS_7224            1 // To do
+#define RALINK_GPIO_HAS_9532            1
 #elif defined (CONFIG_RALINK_RT5350)
 #define RALINK_GPIO_HAS_2722            1
 #endif
@@ -206,6 +206,10 @@
  */
 #define RALINK_SYSCTL_ADDR		RALINK_SYSCTL_BASE	// system control
 #define RALINK_REG_GPIOMODE		(RALINK_SYSCTL_ADDR + 0x60)
+
+#if defined (CONFIG_RALINK_MT7628)
+#define RALINK_REG_GPIOMODE2		(RALINK_SYSCTL_ADDR + 0x64)
+#endif
 
 #define RALINK_IRQ_ADDR			RALINK_INTCL_BASE
 #define RALINK_PRGIO_ADDR		RALINK_PIO_BASE // Programmable I/O
@@ -494,21 +498,24 @@
 #define RALINK_GPIOMODE_ESWINT		0x100000
 
 #elif defined (CONFIG_RALINK_MT7628)
-#define RALINK_GPIOMODE_SPI		0x06
-#define RALINK_GPIOMODE_I2S		0x30
-#define RALINK_GPIOMODE_UART1		0xC0
-#define RALINK_GPIOMODE_WDT		0x100
-#define RALINK_GPIOMODE_PERST		0x200
-#define RALINK_GPIOMODE_REFCLK		0x800
-#define RALINK_GPIOMODE_I2C		0x3000
-#define RALINK_GPIOMODE_EPHY		0xC000
-#define RALINK_GPIOMODE_WLED		0x30000
-#define RALINK_GPIOMODE_UART2		0xC0000
-#define RALINK_GPIOMODE_SPI_SLAVE	0x1000000
-#define RALINK_GPIOMODE_PWM		0x6000000
-#define RALINK_GPIOMODE_UART3		0x18000000
-#define RALINK_GPIOMODE_SDXC		0x20000000
-#define RALINK_GPIOMODE_AGPIO		0x80000000
+#define RALINK_GPIOMODE_GPIO		0x1
+#define RALINK_GPIOMODE_SPI_SLAVE	0x4
+#define RALINK_GPIOMODE_SPI_CS1		0x10
+#define RALINK_GPIOMODE_I2S		0x40
+#define RALINK_GPIOMODE_UART1		0x100
+#define RALINK_GPIOMODE_SDXC		0x400
+#define RALINK_GPIOMODE_SPI		0x1000
+#define RALINK_GPIOMODE_WDT		0x4000
+#define RALINK_GPIOMODE_PERST		0x10000
+#define RALINK_GPIOMODE_REFCLK		0x40000
+#define RALINK_GPIOMODE_I2C		0x100000
+#define RALINK_GPIOMODE_EPHY		0x40000
+#define RALINK_GPIOMODE_P0LED		0x100000
+#define RALINK_GPIOMODE_WLED		0x400000
+#define RALINK_GPIOMODE_UART2		0x1000000
+#define RALINK_GPIOMODE_UART3		0x4000000
+#define RALINK_GPIOMODE_PWM0		0x10000000
+#define RALINK_GPIOMODE_PWM1		0x40000000
 
 #else
 #error Please Choose System Type
@@ -518,8 +525,10 @@
 // !! Warning: changing this value may make other features(MDIO, PCI, etc) lose efficacy
 #if defined (CONFIG_RALINK_MT7621)
 #define RALINK_GPIOMODE_DFT		(RALINK_GPIOMODE_UART2 | RALINK_GPIOMODE_UART3 | RALINK_GPIOMODE_WDT)
+#elif defined (CONFIG_RALINK_MT7620)
+#define RALINK_GPIOMODE_DFT		(RALINK_GPIOMODE_I2C)
 #elif defined (CONFIG_RALINK_MT7628)
-#define RALINK_GPIOMODE_DFT		(RALINK_GPIOMODE_UART2 | RALINK_GPIOMODE_UART3)
+#define RALINK_GPIOMODE_DFT		(RALINK_GPIOMODE_UART2 | RALINK_GPIOMODE_UART3) | (RALINK_GPIOMODE_SPI_CS1) | (RALINK_GPIOMODE_WDT)
 #else
 #define RALINK_GPIOMODE_DFT             (RALINK_GPIOMODE_UARTF)
 #endif
